# assets_directory

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets_directory/: assets_directory.py  transcript_cleanup.py
kantan_assets/: ass_to_json.py  kantan_assets.py  test_script.py
src/kantan_assets/: kantan_assets.py
