[tool.poetry]
name = "assets-directory"
version = "0.1.0"
description = ""
authors = ["Christopher Perry <ozbonus@gmail.com>"]
readme = "README.md"
packages = [{include = "assets_directory"}]

[tool.poetry.dependencies]
python = "^3.11"
tinytag = "^1.8.1"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
