[tool.poetry]
name = "assets-directory"
version = "0.1.0"
description = ""
authors = ["Christopher Perry <ozbonus@gmail.com>"]
readme = "README.md"
packages = [{include = "assets_directory"}]

[tool.poetry.dependencies]
python = "^3.11"
tinytag = "^1.8.1"
ruff = "^0.0.275"
ffmpeg-python = "^0.2.0"
pillow = "^10.1.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
